docs/examples/valid/extension/bitwise/bitwiseOr.wacc
begin
  int x = 2 | 3;
  println x
end
