docs/examples/invalid/semanticErr/extension/bitwise/bitwiseType.wacc
begin
  int x = true & 3;
  println x
end
